--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -646,7 +646,7 @@
                             <li><a class="dropdown-item" href="{{ url_for('advanced_analytics.index') }}"><i class="fas fa-chart-line"></i> Advanced Analytics</a></li>
                             <li><a class="dropdown-item" href="{{ url_for('advanced_features.currency_converter') }}"><i class="fas fa-exchange-alt"></i> Valutakonverter</a></li>
                             <li><a class="dropdown-item" href="{{ url_for('investment_analyzer.index') }}"><i class="fas fa-calculator"></i> Investment Analyzer</a></li>
-                            <li><a class="dropdown-item" href="{{ url_for('mobile_trading.mobile_dashboard') }}"><i class="fas fa-mobile-alt"></i> Mobile Trading</a></li>
+                            <li><a class="dropdown-item" href="{{ url_for('main.mobile_trading_redirect') }}"><i class="fas fa-mobile-alt"></i> Mobile Trading</a></li>
                         </ul>
                     </li>
                     <li class="nav-item dropdown">
