--- a/app/templates/price_alerts/settings.html
+++ b/app/templates/price_alerts/settings.html
@@ -31,7 +31,7 @@
                 </div>
                 <div class="card-body">
                     <form method="POST" action="{{ url_for('price_alerts.settings') }}">
-                        {{ csrf_token() }}
+                        <input type="hidden" name="csrf_token" value="{{ csrf_token() }}">
                         
                         <!-- Email Notifications -->
                         <div class="mb-4">
