--- a/app/templates/portfolio/view.html
+++ b/app/templates/portfolio/view.html
@@ -100,7 +100,7 @@
                                 </tr>
                             </thead>
                             <tbody>
-                                {% for holding in portfolio.holdings %}
+                                {% for holding in holdings %}
                                 <tr>
                                     <td><strong>{{ holding.symbol }}</strong></td>
                                     <td>{{ holding.company_name|default(holding.symbol) }}</td>
