--- a/app/templates/market_intel/insider_trading.html
+++ b/app/templates/market_intel/insider_trading.html
@@ -284,7 +284,7 @@
                             </a>
                         </div>
                         <div class="col-md-3">
-                            <a href="{{ url_for('portfolio.index') }}" class="btn btn-outline-warning w-100 mb-2">
+                            <a href="{{ url_for('portfolio.portfolio_overview') }}" class="btn btn-outline-warning w-100 mb-2">
                                 Legg til Portefølje
                             </a>
                         </div>
