--- a/app/templates/seo/blog_post.html
+++ b/app/templates/seo/blog_post.html
@@ -221,7 +221,7 @@
                         <a href="{{ url_for('analysis.ai') }}" class="btn btn-outline-primary btn-sm">
                             <i class="bi bi-robot"></i> AI-Analyse
                         </a>
-                        <a href="{{ url_for('portfolio.index') }}" class="btn btn-outline-success btn-sm">
+                        <a href="{{ url_for('portfolio.portfolio_overview') }}" class="btn btn-outline-success btn-sm">
                             <i class="bi bi-briefcase"></i> Min Portefølje
                         </a>
                     </div>
