--- a/templates/base.html
+++ b/templates/base.html
@@ -32,7 +32,7 @@
                         <a class="nav-link" href="{{ url_for('analysis.overview') }}">Analyse</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="{{ url_for('portfolio.index') }}">Portefølje</a>
+                        <a class="nav-link" href="{{ url_for('portfolio.portfolio_overview') }}">Portefølje</a>
                     </li>
                 </ul>
                 
@@ -91,7 +91,7 @@
                             <a href="{{ url_for('analysis.overview') }}" class="text-dark">Analyse</a>
                         </li>
                         <li>
-                            <a href="{{ url_for('portfolio.index') }}" class="text-dark">Portefølje</a>
+                            <a href="{{ url_for('portfolio.portfolio_overview') }}" class="text-dark">Portefølje</a>
                         </li>
                     </ul>
                 </div>
