--- a/app/templates/admin/index.html
+++ b/app/templates/admin/index.html
@@ -31,7 +31,7 @@
           <p class="lead mb-4">Opprett konto for å spore aksjer, opprette porteføljer og få personlige anbefalinger.</p>
           <div class="d-flex justify-content-center gap-3">
             {% if current_user.is_authenticated %}
-              <a href="{{ url_for('portfolio.index') }}" class="btn btn-primary btn-lg">Min portefølje</a>
+              <a href="{{ url_for('portfolio.portfolio_overview') }}" class="btn btn-primary btn-lg">Min portefølje</a>
             {% else %}
               <a href="{{ url_for('main.register') }}" class="btn btn-primary btn-lg">Registrer deg</a>
               <a href="{{ url_for('auth.login') }}" class="btn btn-outline-light btn-lg">Logg inn</a>
@@ -265,7 +265,7 @@
           <p class="lead mb-4">Opprett konto for å spore aksjer, opprette porteføljer og få personlige anbefalinger.</p>
           <div class="d-flex justify-content-center gap-3">
             {% if current_user.is_authenticated %}
-              <a href="{{ url_for('portfolio.index') }}" class="btn btn-primary btn-lg">Min portefølje</a>
+              <a href="{{ url_for('portfolio.portfolio_overview') }}" class="btn btn-primary btn-lg">Min portefølje</a>
             {% else %}
               <a href="{{ url_for('main.register') }}" class="btn btn-primary btn-lg">Registrer deg</a>
               <a href="{{ url_for('auth.login') }}" class="btn btn-outline-light btn-lg">Logg inn</a>
