--- a/app/templates/index_premium.html
+++ b/app/templates/index_premium.html
@@ -238,7 +238,7 @@
                 <div class="card-body">
                     <div class="row">
                         <div class="col-lg-3 col-md-6 mb-3">
-                            <a href="{{ url_for('portfolio.index') }}" class="btn btn-outline-primary w-100 h-100 d-flex flex-column justify-content-center">
+                            <a href="{{ url_for('portfolio.portfolio_overview') }}" class="btn btn-outline-primary w-100 h-100 d-flex flex-column justify-content-center">
                                 <i class="bi bi-briefcase display-6 mb-2"></i>
                                 <span>Mine Porteføljer</span>
                             </a>
