--- a/app/templates/portfolio/create.html
+++ b/app/templates/portfolio/create.html
@@ -8,7 +8,7 @@
         <div class="col-lg-8 mx-auto">
             <div class="d-flex justify-content-between align-items-center mb-4">
                 <h1 class="h3">Opprett Ny Portefølje</h1>
-                <a href="{{ url_for('portfolio.index') }}" class="btn btn-outline-secondary">
+                <a href="{{ url_for('portfolio.portfolio_overview') }}" class="btn btn-outline-secondary">
                     <i class="fas fa-arrow-left"></i> Tilbake
                 </a>
             </div>
