--- a/app/templates/portfolio/view.html
+++ b/app/templates/portfolio/view.html
@@ -12,7 +12,7 @@
                     <p class="text-muted">{{ portfolio.description or 'Ingen beskrivelse' }}</p>
                 </div>
                 <div>
-                        <a href="{{ url_for('portfolio.index') }}" class="btn btn-outline-secondary me-2">
+                        <a href="{{ url_for('portfolio.portfolio_overview') }}" class="btn btn-outline-secondary me-2">
                             <i class="fas fa-arrow-left"></i> Tilbake
                         </a>
                         <a href="{{ url_for('portfolio.add_stock_to_portfolio', id=portfolio.id) }}" class="btn btn-outline-primary me-2">
