--- a/app/templates/stocks/main_overview.html
+++ b/app/templates/stocks/main_overview.html
@@ -289,7 +289,7 @@
                     <i class="bi bi-briefcase text-success display-4 mb-3"></i>
                     <h5>Portefølje</h5>
                     <p class="text-muted">Administrer din virtuelle portefølje</p>
-                    <a href="{{ url_for('portfolio.index') }}" class="btn btn-outline-success">Min Portefølje</a>
+                    <a href="{{ url_for('portfolio.portfolio_overview') }}" class="btn btn-outline-success">Min Portefølje</a>
                 </div>
             </div>
         </div>
